--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node src/0115/q1.ts"
+    "dev": "ts-node src/q2.ts"
   },
   "repository": {
     "type": "git",
